# notifier

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt  serve.cmd
docs/source/: api.md  conf.py  index.md  sphinx指南.md  usage.md  写作指南.md
src/mediainfo/: __about__.py  __init__.py  core.py  utils.py
src/notifier/: __about__.py  __init__.py  __main__.py  _balloontip.py  _toast_tip.ps1  _toast_tip.py  balloontip.ps1  balloontip.py  sample.py  test_notifier.py  toast_tip.py
tests/: test_mediainfo.py
