[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notifier"
description = '一个弹出 Windows toast 消息的小工具'
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]
keywords = ['python']
authors = [{ name = "kevin", email = "kevin@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Homepage = "https://github.com/kisa747/notifier"
Documentation = "https://github.com/kisa747/notifier#readme"
Issues = "https://github.com/kisa747/notifier/issues"
Source = "https://github.com/kisa747/notifier"

[project.scripts]
notifier = "notifier.__main__:main"


[dependency-groups]
dev = ["hatch>=1.14.1"]
docs = [
    "furo>=2025.7.19",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
]
test = ["mypy", "pytest", "pytest-cov"]
hint = ["ruff"]


[tool.uv]
default-groups = ["dev", "docs"]

[[tool.uv.index]] # uv 默认不会读取 pip 的配置，可以配置多个地址
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"


[tool.hatch.version]
# 参考：https://hatch.pypa.io/
path = "src/notifier/__about__.py"

[tool.hatch.build]
only-packages = true
sources = ["src"]
[tool.hatch.build.targets.wheel]
packages = ["src/notifier"]


# pytest配置
[tool.pytest.ini_options]
#addopts = "-ra -q --strict-config --strict-markers --cov --cov-report html"
addopts = "-s -x"
# 源码目录
pythonpath = ["src"]
# 测试目录
testpaths = ["tests"]
# 控制台显示 logging 日志
log_cli = true
log_cli_level = 'INFO'
log_cli_format = '[%(levelname)s]: %(message)s'
log_cli_date_format = '%Y-%m-%d %H:%M:%S'


# 代码覆盖测试
[tool.coverage.run]
branch = true
omit = ["src/notifier/__about__.py"]
[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


# mypy配置
[tool.mypy]
ignore_missing_imports = true


# hatch 自动化任务配置
[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "mypy"]

[tool.hatch.envs.default.scripts]
# 创建新的命令，不能与已有的命令相同，不能使用 pytest、mypy 等。
no-cov = "pytest -s -ra {args}"
cov = "pytest --cov --cov-report html {args}"
my = "mypy src {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.hatch.envs.docs]
dependencies = ["sphinx", "myst-parser", "furo", "sphinx-autobuild"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M html docs/source docs/build"
serve = "sphinx-autobuild docs/source docs/build/html"


# black配置
[tool.black]
line-length = 90
skip-string-normalization = true
include = '\.py[iw]?$'
